@@ -30,7 +30,7 @@
 	<div role="search" >
 		<label for="s" ><?php _e( 'Search', 'manduca' ) ?></label>
 		<input type="text" placeholder="<?php _e( 'Search', 'manduca' ); ?>" value="<?php echo get_search_query(); ?>" name="s"  id="s" accesskey="4"/>
-		<span class="tooltip" aria-hidden="true"><?php _e( 'access key: 4', 'manduca' ); ?></span>
+		<span class="tooltip" aria-hidden="true"><?php _e( 'Access key', 'manduca' ); ?>: 4</span>
 		<button type="submit" class="search-submit" id="search-submit" aria-label="<?php _e( 'Start search', 'manduca' ) ?>" >
 		   <span class="screen-reader-text">
 			   <?php _e( 'Search', 'manduca' ) ?>
